# robbo-obibok-v2

./: .env.example  .gitignore  AGENTS.md  BUILD_PLAN.md  CHANGELOG.md  Makefile  README.md  archiwum  config.yaml  favorites.json.bak  pyproject.toml  run_bot.sh
.github/workflows/: ci.yml  release.yml
.hermes/: sol-context.md
deploy/: install-systemd.sh  prestart.sh  robbo-obibok-v2.service  robbo-obibok.service  robbo-obibok.service.in
scripts/: build_asma_index.py  build_ay_index.py  build_hvsc_index.py  build_kgen_index.py  build_modarchive_index.py  build_tiny_index.py  build_ym_index.py  convert_caches.py  index_config.py
src/: __main__.py  audio.py  bot.py  cog_shared.py  cogs.py  collection_cog.py  collection_loader.py  config.py  discord_compat.py  embeds.py  favorites.py  favorites_cog.py  launcher.py  lease.py  models.py  monitor.py  persistence.py  playback.py  playback_cog.py  queue.py  remote.py  stream.py  subsong.py  tools_cog.py  voice_streams.py
tests/: conftest.py  test_audio.py  test_bot.py  test_collection_loader.py  test_config.py  test_embeds.py  test_favorites.py  test_index_config.py  test_launcher.py  test_lease.py  test_models.py  test_monitor.py  test_persistence.py  test_playback.py  test_queue.py  test_remote.py  test_remote_playback.py  test_remote_routes.py  test_stream.py  test_subsong.py  test_tools.py  test_voice_streams.py
tests/integration/: test_host.py
